--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Visualizer",
   "main": "server.js",
   "scripts": {
+    "dev":"nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npm run dev"
   },
   "author": "Hieu Tran",
   "license": "ISC",
@@ -13,7 +14,11 @@
     "ejs": "^3.1.5",
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
+    "particle.js": "^1.0.7",
     "path": "^0.12.7",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
